# quakespasm

./: .gitignore  CMakeLists.txt  Quakespasm.txt  local-server.py
Quake/: bgmusic.c  cl_main.c  cl_parse.c  common.c  gl_texmgr.c  gl_vidsdl.c  host.c  in_sdl.c  main_sdl.c  miniz.h  net_sys.h  pl_linux.c  pl_win.c  q_stdinc.h  quakedef.h  sbar.c  snd_mem.c  snd_sdl.c  sys_sdl_unix.c  sys_sdl_win.c
